ユーザーの追加入力フォームのレイアウト実装

--- a/comet/View/TextCollectionViewItem.xib
+++ b/comet/View/TextCollectionViewItem.xib
@@ -15,19 +15,19 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="Hz6-mo-xeY">
-            <rect key="frame" x="0.0" y="0.0" width="241" height="16"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <rect key="frame" x="0.0" y="0.0" width="601" height="16"/>
+            <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
             <subviews>
-                <box fixedFrame="YES" boxType="custom" cornerRadius="4" title="Box" translatesAutoresizingMaskIntoConstraints="NO" id="obz-4b-fUs">
-                    <rect key="frame" x="0.0" y="0.0" width="241" height="16"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                <box boxType="custom" cornerRadius="4" title="Box" id="obz-4b-fUs">
+                    <rect key="frame" x="0.0" y="0.0" width="601" height="16"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
                     <view key="contentView" id="dAs-5m-vNx">
-                        <rect key="frame" x="1" y="1" width="239" height="14"/>
+                        <rect key="frame" x="1" y="1" width="599" height="14"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" preferredMaxLayoutWidth="232" translatesAutoresizingMaskIntoConstraints="NO" id="ZVB-fD-xud">
-                                <rect key="frame" x="9" y="0.0" width="232" height="16"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZVB-fD-xud">
+                                <rect key="frame" x="-2" y="0.0" width="603" height="16"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
                                 <textFieldCell key="cell" lineBreakMode="truncatingTail" usesSingleLineMode="YES" id="l11-Dc-cCt">
                                     <font key="font" usesAppearanceFont="YES"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -39,7 +39,7 @@
                     <color key="borderColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </box>
             </subviews>
-            <point key="canvasLocation" x="138" y="176"/>
+            <point key="canvasLocation" x="238.5" y="176"/>
         </customView>
         <collectionViewItem nibName="TextCollectionViewItem" id="4ox-4C-yBD" customClass="TextCollectionViewItem" customModule="comet" customModuleProvider="target"/>
     </objects>
