--- a/comet/View/TextCollectionViewItem.xib
+++ b/comet/View/TextCollectionViewItem.xib
@@ -15,18 +15,18 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="Hz6-mo-xeY">
-            <rect key="frame" x="0.0" y="0.0" width="601" height="16"/>
+            <rect key="frame" x="0.0" y="0.0" width="601" height="20"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
             <subviews>
-                <box boxType="custom" cornerRadius="4" title="Box" id="obz-4b-fUs">
-                    <rect key="frame" x="0.0" y="0.0" width="601" height="16"/>
+                <box boxType="custom" title="Box" id="obz-4b-fUs">
+                    <rect key="frame" x="0.0" y="0.0" width="601" height="20"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
                     <view key="contentView" id="dAs-5m-vNx">
-                        <rect key="frame" x="1" y="1" width="599" height="14"/>
+                        <rect key="frame" x="1" y="1" width="599" height="18"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZVB-fD-xud">
-                                <rect key="frame" x="-2" y="0.0" width="603" height="16"/>
+                                <rect key="frame" x="4" y="0.0" width="593" height="16"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
                                 <textFieldCell key="cell" lineBreakMode="truncatingTail" usesSingleLineMode="YES" id="l11-Dc-cCt">
                                     <font key="font" usesAppearanceFont="YES"/>
